Added GET request for /recipes/watched
